--- a/page.header.html
+++ b/page.header.html
@@ -94,7 +94,7 @@
   </form>
 </div>
 
-{if="!empty( $_PAGE_ ) && $_PAGE_ === 'linklist'"}
+{if="!empty( $links )"}
 {include="linklist.paging"}
 {/if}
 
