--- a/daily.html
+++ b/daily.html
@@ -13,6 +13,9 @@
       {'The Daily Shaarli'|t}
       <a class="daily-rss" href="{$base_path}/daily-rss" title="{'1 RSS entry per day'|t}"><i class="fa fa-rss"></i></a>
     </h2>
+    <div class="daily-desc">
+      {'All links of one day in a single page.'|t}
+    </div>
 
     <div id="plugin_zone_start_daily" class="plugin_zone">
       {loop="$plugin_start_zone"}
@@ -21,44 +24,37 @@
     </div>
 
     <div class="daily-about">
-
-      <div class="pure-g">
-        <div class="pure-u-lg-1-3 pure-u-1">
+      <p>
           {if="$previousday"}
             <a href="{$base_path}/daily?day={$previousday}">
               <i class="fa fa-arrow-left"></i>
               {'Previous day'|t}
             </a>
           {/if}
-        </div>
-        <div class="daily-desc pure-u-lg-1-3 pure-u-1">
-          {'All links of one day in a single page.'|t}
-        </div>
-        <div class="pure-u-lg-1-3 pure-u-1">
-          {if="$nextday"}
-            <a href="{$base_path}/daily?day={$nextday}">
-              {'Next day'|t}
-              <i class="fa fa-arrow-right"></i>
-            </a>
-          {/if}
-        </div>
-      </div>
-      <div>
-        <h3 class="window-subtitle">
+        </p>
+
+        <h3>
           {if="!empty($dayDesc)"}
             {$dayDesc} -
           {/if}
           {function="format_date($dayDate, false)"}
         </h3>
 
-        <div id="plugin_zone_about_daily" class="plugin_zone">
+        <p>
+          {if="$nextday"}
+            <a href="{$base_path}/daily?day={$nextday}">
+              {'Next day'|t}
+              <i class="fa fa-arrow-right"></i>
+            </a>
+          {/if}
+        </p>
+      </div>
+
+      <div id="plugin_zone_about_daily" class="plugin_zone">
           {loop="$daily_about_plugin"}
             {$value}
           {/loop}
-        </div>
       </div>
-    </div>
-
 
     {if="$linksToDisplay"}
       <div class="pure-g">
