--- a/pluginsadmin.html
+++ b/pluginsadmin.html
@@ -16,7 +16,7 @@
   <div class="clear"></div>
 </noscript>
 
-<form method="POST" action="?do=save_pluginadmin" name="pluginform" id="pluginform" class="pluginform-container">
+<form method="POST" action="{$base_path}/admin/plugins" name="pluginform" id="pluginform" class="pluginform-container">
   <div class="pure-g">
     <div class="pure-u-lg-1-8 pure-u-1-24"></div>
     <div class="pure-u-lg-3-4 pure-u-22-24 page-form page-form-complete">
@@ -32,7 +32,7 @@
           <table id="plugin_table">
             <thead>
               <tr>
-                <th class="center">{'Disable'|t}</th>
+                <th class="center">{'Enabled'|t}</th>
                 <th>{'Name'|t}</th>
                 <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
                 <th class="center">{'Order'|t}</th>
@@ -61,7 +61,7 @@
             </tbody>
             <tfoot>
               <tr>
-                <th class="center">{'Disable'|t}</th>
+                <th class="center">{'Enabled'|t}</th>
                 <th>{'Name'|t}</th>
                 <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
                 <th class="center">{'Order'|t}</th>
@@ -82,7 +82,7 @@
           <table>
             <thead>
               <tr>
-                <th class="center">{'Enable'|t}</th>
+                <th class="center">{'Enabled'|t}</th>
                 <th>{'Name'|t}</th>
                 <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
               </tr>
@@ -105,7 +105,7 @@
             </tbody>
             <tfoot>
               <tr>
-                <th class="center">{'Enable'|t}</th>
+                <th class="center">{'Enabled'|t}</th>
                 <th>{'Name'|t}</th>
                 <th><div class="pure-u-0 pure-u-lg-visible">{'Description'|t}</div></th>
               </tr>
@@ -117,7 +117,7 @@
 
       <div class="center more">
         {"More plugins available"|t}
-        <a href="doc/html/Community-&-Related-software/#third-party-plugins">{"in the documentation"|t}</a>.
+        <a href="{$root_path}/doc/html/Community-&-Related-software/#third-party-plugins">{"in the documentation"|t}</a>.
       </div>
       <div class="center">
         <input type="submit" value="{'Save'|t}" name="save">
@@ -127,7 +127,7 @@
   <input type="hidden" name="token" value="{$token}">
 </form>
 
-<form action="?do=save_pluginadmin" method="POST">
+<form action="{$base_path}/admin/plugins" method="POST">
   <div class="pure-g">
     <div class="pure-u-lg-1-8 pure-u-1-24"></div>
     <div class="pure-u-lg-3-4 pure-u-22-24 page-form page-form-light">
@@ -173,10 +173,11 @@
       </section>
     </div>
   </div>
+  <input type="hidden" name="token" value="{$token}">
 </form>
 
 {include="page.footer"}
-<script src="js/pluginsadmin.min.js?v={$version_hash}"></script>
+<script src="{$asset_path}/js/pluginsadmin.min.js?v={$version_hash}#"></script>
 
 </body>
 </html>
