--- a/tools.html
+++ b/tools.html
@@ -53,7 +53,7 @@
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
   <div class="page-form pure-u-20-24">
-    <h2 class="window-title">Bookmarklets</h2>
+    <h2 class="window-title">{'Bookmarklets'|t}</h2>
     <p>
       {'Drag one of these button to your bookmarks toolbar or right-click it and "Bookmark This Link"'|t},
       {'then click on the bookmarklet in any page you want to share.'|t}
@@ -105,23 +105,10 @@
 <div class="pure-g pure-g-full">
   <div class="pure-u-2-24"></div>
   <div class="page-form pure-u-20-24">
-    <h2 class="window-title">{'3rd party'|t}</h2>
+    <h2 class="window-title">{'Third-party resources'|t}</h2>
     <div class="tools-item">
-      <a href="https://addons.mozilla.org/fr/firefox/addon/shaarli/" class="pure-button">Firefox {'plugin'|t}</a>
-    </div>
-    <div class="tools-item">
-      <a href="https://chrome.google.com/webstore/detail/shiny-shaarli/hajdfkmbdmadjmmpkkbbcnllepomekin" class="pure-button">Chrome {'plugin'|t}</a>
-    </div>
-    <div class="tools-item">
-      <a href="https://play.google.com/store/apps/details?id=com.dimtion.shaarlier&hl=fr" class="pure-button">Android Shaarlier</a>
-      </a>
-    </div>
-    <div class="tools-item">
-      <a href="https://stakali.toneiv.eu/" class="pure-button">Android Stakali</a>
-    </div>
-    <div class="tools-item">
-      <a href="https://itunes.apple.com/app/ShaarliOS/id1027441388?mt=8"
-         title="iOS" class="pure-button">iOS</a>
+      <a href="https://shaarli.readthedocs.io/en/master/Community-and-related-software/">
+        <span class="pure-button">{'Community and related software'|t}</span>
       </a>
     </div>
   </div>
