--- a/configure.html
+++ b/configure.html
@@ -34,7 +34,7 @@
 
 <p>
 <label for="titleLink">
-<span class="label-name">{'Theme'|t}</span>
+<span class="label-name">{'Themes'|t}</span>
 <select name="theme" id="theme" class="align">
 	{loop="$theme_available"}
 	<option value="{$value}"
@@ -68,7 +68,7 @@
 
 <p>
 <label for="language">
-<span class="label-name">{'Language'|t}</span>
+<span class="label-name">{'Languages'|t}</span>
 <select name="language" id="language" class="align">
 	{loop="$languages"}
 	<option value="{$key}"
@@ -152,7 +152,7 @@
 <label class="checkbox">
             <input type="checkbox" name="updateCheck" id="updateCheck"
                  {if="$enable_update_check"}checked{/if}/>
-              <span class="label-name">{'Check updates'|t}</span><br>
+              <span class="label-name">{'Check for updates'|t}</span><br>
               <span class="label-desc">{'Notify me when a new release is ready'|t}</span>
 </label>
 </p>
@@ -177,7 +177,7 @@
 
 <p>
 <label>
-              <span class="label-name">{'API secret'|t}</span><br>
+              <span class="label-name">{'REST API secret'|t}</span><br>
             <input type="text" name="apiSecret" id="apiSecret" size="50" value="{$api_secret}">
 </label>
 </p>
