--- a/install.html
+++ b/install.html
@@ -30,7 +30,7 @@
       </div>
       <div class="pure-u-lg-{$ratioInput} pure-u-1">
         <div class="form-input">
-          <input type="text" name="setlogin" id="username">
+          <input type="text" name="setlogin" id="username" autocapitalize="off">
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
       <div class="pure-u-lg-{$ratioLabel} pure-u-1">
         <div class="form-label">
           <label for="language">
-            <span class="label-name">{'Language'|t}</span>
+            <span class="label-name">{'Languages'|t}</span>
           </label>
         </div>
       </div>
@@ -127,7 +127,7 @@
       <div class="pure-u-lg-{$ratioLabel} pure-u-7-8">
         <div class="form-label">
           <label for="update">
-            <span class="label-name">{'Check updates'|t}</span><br>
+            <span class="label-name">{'Check for updates'|t}</span><br>
             <span class="label-desc">
               {'Notify me when a new release is ready'|t}
             </span>
