--- a/linklist.paging.html
+++ b/linklist.paging.html
@@ -6,14 +6,14 @@
         </a>
       {/if}
       {if="$page_max>1"}<span class="strong">{$page_current} / {$page_max}</span>{elseif="$page_max === 1"}&nbsp;{/if}
-      {if="$previous_page_url"}
+      {if="$page_max > 1 && $previous_page_url"}
         <a href="{$previous_page_url}" class="paging_older">
           <i class="fa fa-arrow-circle-right"></i>
         </a>
       {/if}
     </div>
 
-    <div class="linklist-filters {if="!$page_max"}pure-u-0{/if}">
+    <div class="linklist-filters">
         <span class="linklist-filters-text pure-u-0 pure-u-lg-visible">
           {'Filters'|t}
         </span>
