--- a/tools.html
+++ b/tools.html
@@ -107,7 +107,7 @@
   <div class="page-form pure-u-20-24">
     <h2 class="window-title">{'Third-party resources'|t}</h2>
     <div class="tools-item">
-      <a href="https://shaarli.readthedocs.io/en/master/Community-and-related-software/">
+      <a href="https://shaarli.readthedocs.io/en/master/Community-and-related-software.html">
         <span class="pure-button">{'Community and related software'|t}</span>
       </a>
     </div>
