Updates for Shaarli v.16

--- a/addlink.html
+++ b/addlink.html
@@ -57,7 +57,7 @@
           <p>
             <label for="tags">{'Tags'|t}
             <input type="text" name="tags" id="tags" class="lf_input"
-                   data-list="{loop="$tags"}{$key}, {/loop}" data-multiple data-autofirst autocomplete="off">
+                   data-list="{loop="$tags"}{$key|escape}, {/loop}" data-multiple data-autofirst autocomplete="off">
             </label>
           </p>
 
