--- a/tag.list.html
+++ b/tag.list.html
@@ -21,7 +21,7 @@
                  value="{$search_tags}"
                  {/if}
           autocomplete="off" data-multiple data-autofirst data-minChars="1"
-          data-list="{loop="$tags"}{$key}, {/loop}"
+          data-list="{loop="$tags"}{$key|escape}, {/loop}"
           >
 
         <button type="submit" class="search-button" aria-label="{'Search'|t}"><i class="fa fa-search" aria-hidden="true"></i></button>
